# ratatui-widgets

./: .markdownlint.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  cliff.toml
.github/workflows/: test.yml
examples/: button.rs  button.tape  buttons.tape  widgets.tape
examples/widgets/: app.rs  buttons.rs  buttons_example.rs  buttons_tab.rs  main.rs
examples/widgets/tabs/: buttons.rs  stack.rs  toggle_switch.rs
src/: button.rs  events.rs  lib.rs  stack_container.rs  toggle_switch.rs
src/events/: crossterm.rs  termion.rs  termwiz.rs
