[package]
name = "ratatui-widgets"
version = "0.1.5"
authors = ["Joshka"]
description = "A set of widgets for the ratatui terminal UI library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/joshka/ratatui-widgets"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.5.0"
crossterm = { version = "0.27.0", optional = true }
derive_builder = "0.20.0"
itertools = "0.12.1"
ratatui = { version= "0.26.2", features = ["unstable-widget-ref"] }
strum = { version = "0.26.2", features = ["derive"] }
termion = { version = "3.0.0", optional = true }
termwiz = { version = "0.22.0", optional = true }
thiserror = "1.0.59"

[dev-dependencies]
color-eyre = "0.6.3"
rand = "0.8.5"
rstest = "0.19.0"
strum = { version = "0.26.2", features = ["derive"] }

[features]
default = ["crossterm"]
