[package]
name = "ratatui-widgets"
version = "0.1.11"
authors = ["Joshka"]
description = "A set of widgets for the ratatui terminal UI library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/joshka/ratatui-widgets"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.6.0"
crossterm = { version = "0.27.0", optional = true }
derive_builder = "0.20.1"
itertools = "0.13.0"
ratatui = { version= "0.27.0", features = ["unstable-widget-ref"] }
strum = { version = "0.26.3", features = ["derive"] }
termion = { version = "4.0.2", optional = true }
termwiz = { version = "0.22.0", optional = true }
thiserror = "1.0.64"

[dev-dependencies]
color-eyre = "0.6.3"
rand = "0.8.5"
rstest = "0.23.0"
strum = { version = "0.26.3", features = ["derive"] }

[features]
default = ["crossterm"]
