[package]
name = "ratatui-widgets"
version = "0.2.0"
authors = ["Joshka"]
description = "A set of widgets for the ratatui terminal UI library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/joshka/ratatui-widgets"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.6.0"
crossterm = { version = "0.28.1", optional = true }
derive_builder = "0.20.2"
itertools = "0.13.0"
ratatui = { version = "0.28.1", features = [
    "unstable-widget-ref",
], default-features = false }
strum = { version = "0.26.3", features = ["derive"] }
termion = { version = "4.0.3", optional = true }
termwiz = { version = "0.22.0", optional = true }
thiserror = "1.0.64"

[dev-dependencies]
color-eyre = "0.6.3"
rand = "0.8.5"
rstest = "0.23.0"
strum = { version = "0.26.3", features = ["derive"] }
ratatui = { version = "0.28.1", features = ["unstable-widget-ref"] }

[features]
default = ["crossterm"]
